--- a/landing/templates/coaching.html
+++ b/landing/templates/coaching.html
@@ -59,7 +59,10 @@
                             </a>
                         </li>
                     </ul>
-                    <div class="tab-content p-4 rounded-lg" style="background: linear-gradient(0deg, rgba(179,157,33,0.27) 0%, rgba(87,29,49,0.91) 30%); box-shadow: 0px 13px 10px 0px #b39d2145">
+
+                    <!-- <div class="tab-content p-4 rounded-lg" style="background:#571d31; box-shadow: 0px 10px 15px 0px"> -->
+                       
+                    <div class="tab-content p-4 rounded-lg" style="background:linear-gradient(0deg, #571d31a8 -50%, #571d31 75%); box-shadow: 0px 6px 15px 0px">
                         <div class="tab-pane active" id="tabsNavigationSimpleIcons1">
                             <div class="text-center">
                                 <p class="text-tertiary font-weight-semibold">Coaching draws upon the expertise of the client through questioning, active listening and reflection in order to help the client move forward in a particular area of their life. Coaching focuses on the future and allows you to think through the different ways you can move forward to ultimately achieve your goal. Coaching differs from mentoring in the fact that it’s about drawing the wisdom and knowledge that you possess; whilst mentoring is about someone else imparting wisdom and knowledge to you based on their experiences. </p>
