--- a/landing/templates/components/testimonials.html
+++ b/landing/templates/components/testimonials.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="200">
-                <h2 class="font-weight-light text-color-tertiary text-center text-7 mb-2" style="font-family: 'Playfair Display', serif;">Client Testimonials</h2>
+                <h2 class="font-weight-light text-quaternary text-center text-7 mb-2" style="font-family: 'Playfair Display', serif;">Client Testimonials</h2>
                 <div class="owl-carousel owl-theme nav-bottom rounded-nav mb-0" data-plugin-options="{'items': 1, 'loop': false, 'nav': true, 'autoHeight': true}" id="testimonial-block">
                     <div>
                         <div class="testimonial testimonial-style-2 testimonial-with-quotes testimonial-quotes-dark mb-0">
@@ -10,8 +10,8 @@
                                 <p class="text-tertiary text-5 line-height-5 mb-0">My coaching experience with Jessica was very positive and it was sad when it came to an end. She managed to get me to think differently about some of the approaches and techniques I was using, especially joining an organisation as a new executive director! The great thing about the sessions was the ease and depth of conversations. I was able to share my innermost thoughts without feeling judged. Jessica is a active listener and a joy to be around</p>
                             </blockquote>
                             <a data-toggle="modal" data-target="#defaultModal">Read More</a>
-                            <div class="testimonial-author">
-                                <p><strong class="font-weight-extra-bold text-2">- Jeff</strong></p>
+                            <div class="testimonial-author  text-3">
+                                <p><strong class="font-weight-extra-bold text-tertiary">- Jeff</strong></p>
                             </div>
                         </div>
                     </div>
@@ -21,8 +21,8 @@
                                 <p class="text-tertiary text-5 line-height-5 mb-0">I really enjoyed and benefitted from my coaching sessions with Jessica. Her relaxed coaching style enabled me to think more carefully about my career aspirations and what I need to do to achieve them. Jessica encouraged me to believe in not only myself but also my abilities and helped me to realise the importance of self-confidence. I have since gone on to step out of my comfort zone and embrace new career opportunities. I am truly thankful for all of Jessica’s support!</p>
                             </blockquote>
                             <a data-toggle="modal" data-target="#defaultModal">Read More</a>
-                            <div class="testimonial-author">
-                                <p><strong class="font-weight-extra-bold text-2">- Deneice</strong></p>
+                            <div class="testimonial-author  text-3">
+                                <p><strong class="font-weight-extra-bold text-tertiary">- Deneice</strong></p>
                             </div>
                         </div>
                     </div>
@@ -35,8 +35,8 @@
                                 </p>
                             </blockquote>
                             <a data-toggle="modal" data-target="#defaultModal">Read More</a>
-                            <div class="testimonial-author">
-                                <p><strong class="font-weight-extra-bold text-2">- Andy</strong></p>
+                            <div class="testimonial-author  text-3">
+                                <p><strong class="font-weight-extra-bold text-tertiary">- Andy</strong></p>
                             </div>
                         </div>
                     </div>
@@ -50,8 +50,8 @@
                                 </p>
                             </blockquote>
                             <a data-toggle="modal" data-target="#defaultModal">Read More</a>
-                            <div class="testimonial-author">
-                                <p><strong class="font-weight-extra-bold text-2">- Sabrina</strong></p>
+                            <div class="testimonial-author  text-3">
+                                <p><strong class="font-weight-extra-bold text-tertiary">- Sabrina</strong></p>
                             </div>
                         </div>
                     </div>
@@ -63,17 +63,17 @@
 
 </section>
 <div class="modal fade show" id="defaultModal" tabindex="-1" role="dialog" aria-labelledby="testimonialAuthor" style="display: hidden;" aria-modal="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
+    <div class="modal-dialog bg-secondary">
+        <div class="modal-content bg-tertiary">
             <div class="modal-header">
-                <h4 class="modal-title text-center text-primary font-weight-bold text-underline" id="testimonialAuthor">Author</h4>
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h4 class="modal-title mx-auto text-center text-uppercase text-primary font-weight-bold text-underline" id="testimonialAuthor">Author</h4>
+                <button type="button" class="close p-3 m-n3" data-dismiss="modal" aria-hidden="true">×</button>
             </div>
             <div class="modal-body text-center">
-                <p id="testimonial">Testimonial</p>
+                <p id="testimonial" class="font-weight-normal text-secondary">Testimonial</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-modern bg-quaternary border-color-quaternary btn-outline text-secondary bg-hover-primary text-hover-tertiary" data-dismiss="modal">Close</button>
+                <button type="button" class="mx-auto btn btn-modern bg-quaternary border-color-quaternary btn-outline text-secondary bg-hover-primary text-hover-tertiary" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
