--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -15,8 +15,10 @@
         <div class="row align-items-center justify-content-center justify-content-lg-between pb-5 pb-lg-0">
             <div class="col-lg-5 order-2 order-lg-1 pt-4 pt-lg-0 pb-5 pb-lg-0 mt-5 mt-lg-0 appear-animation text-center" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="200">
                 <h2 class="font-weight-bold text-color-secondary text-11 mb-2">Who Am I?</h2>
+                <strong class="text-uppercase text-2 text-secondary">Jessica Ocquaye <span class="text-1 text-black-50">EMCC</span></strong>
+                <p class="font-weight-bold text-quaternary text-uppercase mb-0 animated">Life and Career Coach</p>
                 <p class="text-5 py-4">I am committed to ensuring that anyone I work with moves from where they are now to where they want to be, understanding that we are all on unique and on a different journey.</p>
-                <p class="font-weight-bold text-4 mb-4 opacity-9 pb-4">The crux of what I do is connecting people to their purpose and helping them discover meaning. </p>
+                <p class="font-weight-bold text-3 mb-4 opacity-9 pb-4">The crux of what I do is connecting people to their purpose and helping them discover meaning. </p>
                 <a href="/about/" class="btn bg-quaternary text-secondary bg-hover-primary btn-px-5 btn-py-2 text-hover-tertiary border-color-quaternary btn-outline font-weight-bold text-2
                 ">LEARN MORE</a>
             </div>
@@ -73,5 +75,5 @@
     </div>
 </div>
 
-<!-- {% include 'components/testimonials.html' %} -->
+{% include 'components/testimonials.html' %}
 {% endblock %}
