--- a/landing/templates/about.html
+++ b/landing/templates/about.html
@@ -3,7 +3,7 @@
 {% block title %} About {% endblock %} 
 {% block content %}
 
-<section class="page-header page-header-modern page-header-background page-header-background-md parallax overlay overlay-color-dark overlay-show overlay-op-5 mt-0" data-plugin-parallax="" data-plugin-options="{'speed': 1.2}" data-image-src={% static 'img/page-header/headerr.jpg' %} style="position: relative; overflow: hidden;">
+<section class="page-header page-header-modern page-header-background page-header-background-md parallax overlay overlay-color-dark overlay-show overlay-op-5 mt-0" data-plugin-parallax="" data-plugin-options="{'speed': 1.2}" data-image-src={% static 'img/page-header/header.jpg' %} style="position: relative; overflow: hidden;">
     <div class="parallax-background" style="background-image: url('#'); background-size: cover; position: absolute; top: 0px; left: 0px; width: 100%; height: 120%; transform: translate3d(0px, -51.25px, 0px); background-position-x: 50%;"></div>
     <div class="container">
         <div class="row">
@@ -50,7 +50,7 @@
                 <div class="col-sm-6 text-lg-right my-4 my-lg-0">
                     <strong class="text-uppercase text-1 mr-3 text-primary">follow me</strong>
                     <ul class="social-icons float-lg-right">
-                        <li class="social-icons-twitter"><a class="bg-quaternary about-social-link text-secondary bg-hover-primary text-hover-tertiary" href="http://www.instagram.com/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
+                        <li class="social-icons-twitter"><a class="bg-quaternary about-social-link text-secondary bg-hover-primary text-hover-tertiary" href="https://www.tiktok.com/@jessfmcoach"target="_blank" title="Tiktok"><i class="fab fa-tiktok"></i></a></li>
                         <li class="social-icons-linkedin"><a class="bg-quaternary about-social-link text-secondary bg-hover-primary text-hover-tertiary" href="https://www.linkedin.com/in/jessica-ocquaye-mcipd-13b03384" target="_blank" title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
                     </ul>
                 </div>
