--- a/landing/templates/base.html
+++ b/landing/templates/base.html
@@ -15,7 +15,7 @@
 
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="{% static "img/favicon.ico" %}" type="image/x-icon" />
-		<link rel="apple-touch-icon" href="{% static "img/apple-touch-icon.png" %}">
+		<link rel="apple-touch-icon" href="{% static "img/apple-touch-icon.ico" %}">
 
 		<!-- Mobile Metas -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
