--- a/landing/templates/base.html
+++ b/landing/templates/base.html
@@ -14,6 +14,7 @@
 		<meta name="author" content="jfmconsult.co.uk">
 
 		<!-- Favicon -->
+		<link rel="icon" href="{% static "img/favicon.ico" %}" type="image/x-icon" />
 		<link rel="shortcut icon" href="{% static "img/favicon.ico" %}" type="image/x-icon" />
 		<link rel="apple-touch-icon" href="{% static "img/apple-touch-icon.ico" %}">
 
