--- a/landing/templates/base.html
+++ b/landing/templates/base.html
@@ -10,7 +10,7 @@
 		<title>{% block title %}{% endblock %} | JFM Consult</title>
     
 		<meta name="keywords" content="JFM Consult" />
-		<meta name="description" content="Jessica Ocquaye is an EMCC Accredited coach who has worked in realm of people development. She has a transpersonal coaching style and aims to connect people to their purpose, helping them discover meaning.">
+		<meta name="description" content="Jessica Ocquaye is an EMCC Accredited coach with a transpersonal coaching style and aims to connect people to their purpose, helping them discover meaning.">
 		<meta name="author" content="jfmconsult.co.uk">
 
 		<!-- Favicon -->
