--- a/landing/templates/components/footer.html
+++ b/landing/templates/components/footer.html
@@ -45,7 +45,7 @@
                     <script>
                         document.write(new Date().getFullYear())
                     </script> JFM Consult | Website by 
-                    <a class="text-color-hover-quaternary" href="https://www.github.com/AX99/" target="blank">AX99</a>
+                    <a class="text-color-hover-quaternary" href="https://www.ax99.tech" target="blank">AX99</a>
                 </div>
                 <div class="col">
                     <ul class="footer-social-icons float-right social-icons social-icons-clean social-icons-opacity-light social-icons-icon-light mt-1">
